crates/sid-widgets/src/settings/snapshots/sid_widgets__settings__reset__tests__reset_render_focused.snap
---
source: crates/sid-widgets/src/settings/reset.rs
expression: s
---
┌ Reset to defaults ───────────────────────────────────────┐
│Press Enter to open the reset confirm modal.              │
│This clears settings only — themes, keybinds, quick action│
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
border_top_left: fg=Rgb(212, 65, 65) modifier=NONE
title_first_char: symbol="R" fg=Rgb(230, 230, 240) modifier=BOLD
